# Logger

./: CMakeLists.txt  README.md
src/: Log.h
tests/: Source.cpp
